--- a/cmi-api/src/main/resources/db/changelog/db.changelog-create_tables.yml
+++ b/cmi-api/src/main/resources/db/changelog/db.changelog-create_tables.yml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
       id: 1
-      author: khaled hamlaoui
+      author: quick-start
       changes:
         - createTable:
-            tableName: inscription
+            tableName: user
             columns:
               - column:
                   name: id
