add service member

--- a/cmi-api/build.gradle
+++ b/cmi-api/build.gradle
@@ -20,6 +20,10 @@ repositories {
 springBoot {
 }
 
+bootRun {
+    args = ["--spring.profiles.active=dev"]
+}
+
 test {
     include '**/*Test.class'
     testLogging.showStandardStreams = true
