--- a/cmi-api/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/cmi-api/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
     - include:
-        file: db/changelog/db.changelog-create_tables.yml
+        file: db/changelog/db.changelog-v0.0.1.yml
