--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,14 @@ language: java
 jdk:
  - oraclejdk8
 
+env:
+  - NODE_VERSION="6"
+
+before_install:
+  - nvm install $NODE_VERSION
+  - node --version
+  - npm --version
+
 script:
 - ./scripts/build-api.sh
+- ./scripts/build-app.sh
