--- a/cmi-api/src/test/resources/application-test.yml
+++ b/cmi-api/src/test/resources/application-test.yml
@@ -17,7 +17,9 @@ spring:
     test-connection: false
 
 liquibase:
- enabled: true
+  change-log: classpath:/db/changelog/db.changelog-test.yaml
+  enabled: true
+
 management:
   health:
     mail:
